# flashbang

./: Cargo.toml  build.rs
res/: cubeflat.mtl  lago_disola_1k.hdr
src/: camera.rs  context.rs  depth.wgsl  fullscreen.wgsl  geometry.wgsl  instance.rs  light.rs  main.rs  model.rs  peel.wgsl  resources.rs  skybox.wgsl  state.rs  texture.rs
