[package]
name = "flashbang"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
env_logger = "0.9.0"
log = "0.4.14"
pollster = "0.2.4"
wgpu = "0.13.1"
winit = "0.26.1"
bytemuck = { version = "1.7.2", features = ["derive"] }
anyhow = { version = "1.0", features = ["backtrace"] }
tobj = { version = "3.2.1", features = ["async"] }
cfg-if = "1.0.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "openexr", "hdr"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Other dependencies
reqwest = { version = "0.11" }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"